<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cvbuilder.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_skills"
        android:name="com.example.cvbuilder.ui.skills.SkillsFragment"
        android:label="@string/menu_skills"
        tools:layout="@layout/fragment_skills" >
        <action
            android:id="@+id/action_nav_skills_to_editSkillFragment"
            app:destination="@id/editSkillFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_experience"
        android:name="com.example.cvbuilder.ui.experience.ExperienceFragment"
        android:label="@string/menu_work_experience"
        tools:layout="@layout/fragment_experience" />
    <fragment
        android:id="@+id/editSkillFragment"
        android:name="com.example.cvbuilder.ui.skills.EditSkillFragment"
        android:label="fragment_edit_skill"
        tools:layout="@layout/fragment_edit_skill" >
        <action
            android:id="@+id/action_editSkillFragment_to_nav_skills"
            app:destination="@id/nav_skills" />
        <argument
            android:name="Skill"
            app:argType="com.example.cvbuilder.db.Skill"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
</navigation>